src/objects/MenuAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Menu Assignments</relationshipLabel>
        <relationshipName>Menu_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Menu__c</fullName>
        <label>Menu</label>
        <referenceTo>Menu__c</referenceTo>
        <relationshipLabel>Menu Assignments</relationshipLabel>
        <relationshipName>Menu_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Menu Assignment</label>
    <nameField>
        <label>Menu Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>